# ide_workshop

./: .gitignore  pyproject.toml
app/: main.py
app/connectors/: nasa_near_earth_object_ws.py
app/models/: calculation.py  near_earth_object.py
app/repositories/: calculation_repository.py
app/resources/: calculation_resource.py  calculator_resource.py  health.py  health_resource.py  near_earth_asteroid_resource.py  resource.py
app/services/: calculation_service.py  near_earth_asteriods_service.py  near_earth_asteroids_service.py
app/static/: calculator.html  calculator.js  index.html  nasa.html  nasa.js  script.js  style.css
tests/connectors/: nasa_feed_response.json  nasa_feed_response.txt  test_nasa_near_earth_object_ws.py
tests/resources/: test_calculation_resource.py  test_health.py  test_health_resource.py  test_near_earth_asteroid_resource.py
tests/services/: test_calculation_service.py
